[UPDATE] docker 구성파일 업데이트

--- a/docker/.env.teddynote
+++ b/docker/.env.teddynote
@@ -932,3 +932,37 @@ MAX_SUBMIT_COUNT=100
 
 # The maximum number of top-k value for RAG.
 TOP_K_MAX_VALUE=10
+
+##########################
+# Teddy Note (Mac/Linux) 아래 경로는 현재 환경에 맞게 수정해주세요.
+##########################
+
+# OpenWebUI Data
+OPENWEBUI_LOCAL_DATA=/Users/teddy/Dev/openwebui-dify/openwebui
+# Pipelines Data
+PIPELINES_LOCAL_DATA=/Users/teddy/Dev/openwebui-dify/pipelines
+# Langflow Data
+LANGFLOW_LOCAL_DATA=/Users/teddy/Dev/openwebui-dify/langflow
+# Langflow Postgres Data
+LANGFLOW_LOCAL_POSTGRES_DATA=/Users/teddy/Dev/openwebui-dify/langflow-postgres
+
+
+##########################
+# Teddy Note (Windows) 아래 경로는 현재 환경에 맞게 수정해주세요.
+##########################
+
+# OpenWebUI Data
+# Windows
+# OPENWEBUI_LOCAL_DATA=C:/Users/Teddy/Dev/openwebui-dify/openwebui
+
+# Pipelines Data
+# Windows
+# PIPELINES_LOCAL_DATA=C:/Users/Teddy/Dev/openwebui-dify/pipelines
+
+# Langflow Data
+# Windows
+# LANGFLOW_LOCAL_DATA=C:/Users/Teddy/Dev/openwebui-dify/langflow
+
+# Langflow Postgres Data
+# Windows
+# LANGFLOW_LOCAL_POSTGRES_DATA=C:/Users/Teddy/Dev/openwebui-dify/langflow-postgres
