--- a/docker/.env.teddynote
+++ b/docker/.env.teddynote
@@ -951,18 +951,18 @@ LANGFLOW_LOCAL_POSTGRES_DATA=/Users/teddy/Dev/openwebui-dify/langflow-postgres
 # Teddy Note (Windows) 아래 경로는 현재 환경에 맞게 수정해주세요.
 ##########################
 
-# OpenWebUI Data
-# Windows
+# # OpenWebUI Data
+# # Windows
 # OPENWEBUI_LOCAL_DATA=C:/Users/Teddy/Dev/openwebui-dify/openwebui
 
-# Pipelines Data
-# Windows
+# # Pipelines Data
+# # Windows
 # PIPELINES_LOCAL_DATA=C:/Users/Teddy/Dev/openwebui-dify/pipelines
 
-# Langflow Data
-# Windows
+# # Langflow Data
+# # Windows
 # LANGFLOW_LOCAL_DATA=C:/Users/Teddy/Dev/openwebui-dify/langflow
 
-# Langflow Postgres Data
-# Windows
+# # Langflow Postgres Data
+# # Windows
 # LANGFLOW_LOCAL_POSTGRES_DATA=C:/Users/Teddy/Dev/openwebui-dify/langflow-postgres
