--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,14 @@ __pycache__/
 # C extensions
 *.so
 
+# IDE Cache
+api/.idea/
+api/.vscode/
+web/.vscode/
+
+# Docker Cache
+docker/openwebui-data
+
 # Distribution / packaging
 .Python
 build/
